# comb

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  NOTICE  README.md  SECURITY.md
crates/comb-buzz/: Cargo.toml
crates/comb-buzz/src/: lib.rs
crates/comb-cli/: Cargo.toml
crates/comb-cli/src/: main.rs
crates/comb-core/: Cargo.toml
crates/comb-core/src/: lib.rs
crates/comb-engine/: Cargo.toml
crates/comb-engine/src/: lib.rs
crates/comb-store/: Cargo.toml
crates/comb-store/src/: lib.rs
crates/combd/: Cargo.toml
crates/combd/src/: main.rs
docs/: architecture.md  buzz-rfc-issue.md  upstream.md
site/: .gitignore  README.md  package-lock.json  package.json
site/.openai/: hosting.json
site/app/: evidence-explorer.tsx  globals.css  layout.tsx  page.tsx  project-status.ts
site/tests/: rendered-html.test.mjs
tests/e2e/: README.md  buzz-main-proof.json
