[workspace]
members = [
    "crates/comb-buzz",
    "crates/comb-cli",
    "crates/comb-core",
    "crates/comb-engine",
    "crates/comb-store",
    "crates/combd",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/axx-archive/comb"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
futures-util = "0.3"
hex = "0.4"
nostr = "0.44"
serde = { version = "1", features = ["derive"] }
serde_jcs = "0.2"
serde_json = "1"
sha2 = "0.10"
rusqlite = { version = "0.37", features = ["bundled"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }
