[package]
name = "comb-buzz"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Authenticated public-protocol adapter between Comb and Buzz"

[dependencies]
anyhow.workspace = true
futures-util.workspace = true
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
url.workspace = true
uuid.workspace = true
