[package]
name = "comb-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Operator CLI and deterministic Buzz compatibility proof for Comb"

[[bin]]
name = "comb"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
comb-buzz = { path = "../comb-buzz" }
comb-core = { path = "../comb-core" }
comb-store = { path = "../comb-store" }
nostr.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
