[package]
name = "combd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Channel-scoped Comb worker for Buzz"

[dependencies]
anyhow.workspace = true
comb-buzz = { path = "../comb-buzz" }
nostr.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
